@@ -18,15 +18,21 @@ package org.openrewrite.java.format;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.ValueSource;
+import org.openrewrite.ExecutionContext;
+import org.openrewrite.java.JavaIsoVisitor;
 import org.openrewrite.java.JavaParser;
+import org.openrewrite.java.style.IntelliJ;
 import org.openrewrite.java.style.WrappingAndBracesStyle;
+import org.openrewrite.java.tree.J;
 import org.openrewrite.test.RecipeSpec;
 import org.openrewrite.test.RewriteTest;
 
 import java.util.Arrays;
+import java.util.List;
 
 import static org.openrewrite.java.Assertions.java;
 import static org.openrewrite.style.LineWrapSetting.*;
+import static org.openrewrite.style.StyleHelper.fromStyles;
 import static org.openrewrite.test.RewriteTest.toRecipe;
 
 class WrapMethodChainsTest implements RewriteTest {
@@ -35,8 +41,6 @@ class WrapMethodChainsTest implements RewriteTest {
     public void defaults(RecipeSpec spec) {
         spec
           .parser(JavaParser.fromJavaVersion().dependsOn("""
-            package com.example;
-            
             public class MyObject {
                 public static Builder builder() { return new Builder(); }
                 public static Builder newBuilder() { return new Builder(); }
@@ -50,18 +54,22 @@ class WrapMethodChainsTest implements RewriteTest {
             }
             """))
           .recipe(toRecipe(() -> new WrappingAndBracesVisitor<>(
-            new WrappingAndBracesStyle(
-              120,
-              new WrappingAndBracesStyle.IfStatement(false),
-              new WrappingAndBracesStyle.ChainedMethodCalls(WrapAlways, Arrays.asList("builder", "newBuilder"), false),
-              new WrappingAndBracesStyle.MethodDeclarationParameters(WrapAlways, false, false, false),
-              new WrappingAndBracesStyle.Annotations(WrapAlways),
-              new WrappingAndBracesStyle.Annotations(WrapAlways),
-              new WrappingAndBracesStyle.Annotations(WrapAlways),
-              new WrappingAndBracesStyle.Annotations(DoNotWrap),
-              new WrappingAndBracesStyle.Annotations(DoNotWrap),
-              new WrappingAndBracesStyle.Annotations(DoNotWrap))
-          )));
+            List.of(
+              fromStyles(
+                new WrappingAndBracesStyle(
+                  120,
+                  new WrappingAndBracesStyle.IfStatement(false),
+                  new WrappingAndBracesStyle.ChainedMethodCalls(WrapAlways, Arrays.asList("builder", "newBuilder"), false),
+                  new WrappingAndBracesStyle.MethodDeclarationParameters(WrapAlways, false, false, false),
+                  new WrappingAndBracesStyle.MethodCallArguments(DoNotWrap, false, false, false),
+                  new WrappingAndBracesStyle.Annotations(WrapAlways),
+                  new WrappingAndBracesStyle.Annotations(WrapAlways),
+                  new WrappingAndBracesStyle.Annotations(WrapAlways),
+                  new WrappingAndBracesStyle.Annotations(DoNotWrap),
+                  new WrappingAndBracesStyle.Annotations(DoNotWrap),
+                  new WrappingAndBracesStyle.Annotations(DoNotWrap)))
+            ),
+            null)));
     }
 
     @Test
@@ -69,8 +77,6 @@ class WrapMethodChainsTest implements RewriteTest {
         rewriteRun(
           java(
             """
-              package com.example;
-              
               class Test {
                   void test() {
                       MyObject obj = MyObject.builder().name("test").age(25).build();
@@ -78,8 +84,6 @@ class WrapMethodChainsTest implements RewriteTest {
               }
               """,
             """
-              package com.example;
-              
               class Test {
                   void test() {
                       MyObject obj = MyObject.builder()
@@ -98,8 +102,6 @@ class WrapMethodChainsTest implements RewriteTest {
         rewriteRun(
           java(
             """
-              package com.example;
-              
               class Test {
                   void test() {
                       MyObject obj = MyObject.newBuilder().name("test").age(25).build();
@@ -107,8 +109,6 @@ class WrapMethodChainsTest implements RewriteTest {
               }
               """,
             """
-              package com.example;
-              
               class Test {
                   void test() {
                       MyObject obj = MyObject.newBuilder()
@@ -127,8 +127,6 @@ class WrapMethodChainsTest implements RewriteTest {
         rewriteRun(
           java(
             """
-              package com.example;
-              
               class Test {
                   void test() {
                       MyObject obj = MyObject.builder()
@@ -147,8 +145,6 @@ class WrapMethodChainsTest implements RewriteTest {
         rewriteRun(
           java(
             """
-              package com.example;
-              
               class Test {
                   void test() {
                       MyObject obj = MyObject.builder()
@@ -167,8 +163,6 @@ class WrapMethodChainsTest implements RewriteTest {
         rewriteRun(
           java(
             """
-              package com.example;
-              
               class Test {
                   void test() {
                       MyObject obj = MyObject.builder()
@@ -187,8 +181,6 @@ class WrapMethodChainsTest implements RewriteTest {
         rewriteRun(
           java(
             """
-              package com.example;
-              
               class Test {
                   void test() {
                       MyObject obj = MyObject.builder().name("test").nested(MyObject.builder().name("nested").build()).build();
@@ -196,8 +188,6 @@ class WrapMethodChainsTest implements RewriteTest {
               }
               """,
             """
-              package com.example;
-              
               class Test {
                   void test() {
                       MyObject obj = MyObject.builder()
@@ -218,15 +208,11 @@ class WrapMethodChainsTest implements RewriteTest {
         rewriteRun(
           java(
             """
-              package com.example;
-              
               class Test {
                   private final MyObject value = MyObject.builder().name("hello").age(30).build();
               }
               """,
             """
-              package com.example;
-              
               class Test {
                   private final MyObject value = MyObject.builder()
               .name("hello")
@@ -243,8 +229,6 @@ class WrapMethodChainsTest implements RewriteTest {
         rewriteRun(
           java(
             """
-              package com.example;
-              
               class Test {
                   MyObject test() {
                       return MyObject.builder().name("hello").age(30).build();
@@ -252,8 +236,6 @@ class WrapMethodChainsTest implements RewriteTest {
               }
               """,
             """
-              package com.example;
-              
               class Test {
                   MyObject test() {
                       return MyObject.builder()
@@ -272,8 +254,6 @@ class WrapMethodChainsTest implements RewriteTest {
         rewriteRun(
           java(
             """
-              package com.example;
-              
               class Test {
                   void test() {
                       MyObject obj = MyObject.builder().build();
@@ -281,8 +261,6 @@ class WrapMethodChainsTest implements RewriteTest {
               }
               """,
             """
-              package com.example;
-              
               class Test {
                   void test() {
                       MyObject obj = MyObject.builder()
@@ -299,8 +277,6 @@ class WrapMethodChainsTest implements RewriteTest {
         rewriteRun(
           java(
             """
-              package com.example;
-              
               class Test {
                   void test() {
                       MyObject obj = MyObject.builder().name("hello") /* comment */ .age(30).build();
@@ -308,8 +284,6 @@ class WrapMethodChainsTest implements RewriteTest {
               }
               """,
             """
-              package com.example;
-              
               class Test {
                   void test() {
                       MyObject obj = MyObject.builder()
@@ -328,8 +302,6 @@ class WrapMethodChainsTest implements RewriteTest {
         rewriteRun(
           java(
             """
-              package com.example;
-              
               import java.util.function.Supplier;
               
               class Test {
@@ -339,8 +311,6 @@ class WrapMethodChainsTest implements RewriteTest {
               }
               """,
             """
-              package com.example;
-              
               import java.util.function.Supplier;
               
               class Test {
@@ -361,18 +331,16 @@ class WrapMethodChainsTest implements RewriteTest {
         rewriteRun(
           java(
             """
-              package com.example;
-             
-             class Test {
-                 void test() {
-                     String result = "hello".toUpperCase()
-             .substring(1)
-             .trim();
-                     String sb = new StringBuilder().append("a")
-             .append("b")
-             .toString();
-                 }
-             }
+              class Test {
+                  void test() {
+                      String result = "hello".toUpperCase()
+              .substring(1)
+              .trim();
+                      String sb = new StringBuilder().append("a")
+              .append("b")
+              .toString();
+                  }
+              }
               """
           )
         );
@@ -383,8 +351,6 @@ class WrapMethodChainsTest implements RewriteTest {
         rewriteRun(
           java(
             """
-              package com.example;
-              
               class Test {
                   void test() {
                       MyObject s1 = MyObject.builder().name("a").age(1).build();
@@ -393,8 +359,6 @@ class WrapMethodChainsTest implements RewriteTest {
               }
               """,
             """
-              package com.example;
-              
               class Test {
                   void test() {
                       MyObject s1 = MyObject.builder()
@@ -417,8 +381,6 @@ class WrapMethodChainsTest implements RewriteTest {
         rewriteRun(
           java(
             """
-              package com.example;
-              
               import java.util.Arrays;
               
               class Test {
@@ -428,8 +390,6 @@ class WrapMethodChainsTest implements RewriteTest {
               }
               """,
             """
-              package com.example;
-              
               import java.util.Arrays;
               
               class Test {
@@ -450,8 +410,6 @@ class WrapMethodChainsTest implements RewriteTest {
         rewriteRun(
           java(
             """
-              package com.example;
-              
               class Test {
                   void test() {
                       MyObject obj = MyObject.builder().name("test").nested(MyObject.builder().build()).age(30).build();
@@ -459,8 +417,6 @@ class WrapMethodChainsTest implements RewriteTest {
               }
               """,
             """
-              package com.example;
-              
               class Test {
                   void test() {
                       MyObject obj = MyObject.builder()
@@ -479,21 +435,24 @@ class WrapMethodChainsTest implements RewriteTest {
     @Test
     void formatStreamChain() {
         rewriteRun(
-          spec -> spec.recipe(toRecipe(() -> new WrappingAndBracesVisitor<>(new WrappingAndBracesStyle(
-            120,
-            new WrappingAndBracesStyle.IfStatement(false),
-            new WrappingAndBracesStyle.ChainedMethodCalls(WrapAlways, Arrays.asList("stream"), false),
-            new WrappingAndBracesStyle.MethodDeclarationParameters(WrapAlways, false, false, false),
-            null,
-            null,
-            null,
-            null,
-            null,
-            null)))),
+          spec -> spec.recipe(toRecipe(() -> new WrappingAndBracesVisitor<>(
+            List.of(
+              fromStyles(
+                new WrappingAndBracesStyle(
+                  120,
+                  new WrappingAndBracesStyle.IfStatement(false),
+                  new WrappingAndBracesStyle.ChainedMethodCalls(WrapAlways, Arrays.asList("stream"), false),
+                  new WrappingAndBracesStyle.MethodDeclarationParameters(WrapAlways, false, false, false),
+                  new WrappingAndBracesStyle.MethodCallArguments(DoNotWrap, false, false, false),
+                  null,
+                  null,
+                  null,
+                  null,
+                  null,
+                  null))),
+            null))),
           java(
             """
-              package com.example;
-              
               import java.util.List;
               import java.util.stream.Collectors;
               
@@ -506,8 +465,6 @@ class WrapMethodChainsTest implements RewriteTest {
               }
               """,
             """
-              package com.example;
-              
               import java.util.List;
               import java.util.stream.Collectors;
               
@@ -530,8 +487,6 @@ class WrapMethodChainsTest implements RewriteTest {
         rewriteRun(
           java(
             """
-              package com.example;
-              
               class Test {
                   void test() {
                       MyObject root = MyObject.builder().name("root").nested(
@@ -548,8 +503,6 @@ class WrapMethodChainsTest implements RewriteTest {
               }
               """,
             """
-              package com.example;
-              
               class Test {
                   void test() {
                       MyObject root = MyObject.builder()
@@ -577,21 +530,24 @@ class WrapMethodChainsTest implements RewriteTest {
     @Test
     void formatStreamWithMultilineFilterLambda() {
         rewriteRun(
-          spec -> spec.recipe(toRecipe(() -> new WrappingAndBracesVisitor<>(new WrappingAndBracesStyle(
-            120,
-            new WrappingAndBracesStyle.IfStatement(false),
-            new WrappingAndBracesStyle.ChainedMethodCalls(WrapAlways, Arrays.asList("stream"), false),
-            new WrappingAndBracesStyle.MethodDeclarationParameters(WrapAlways, false, false, false),
-            null,
-            null,
-            null,
-            null,
-            null,
-            null)))),
+          spec -> spec.recipe(toRecipe(() -> new WrappingAndBracesVisitor<>(
+            List.of(
+              fromStyles(
+                new WrappingAndBracesStyle(
+                  120,
+                  new WrappingAndBracesStyle.IfStatement(false),
+                  new WrappingAndBracesStyle.ChainedMethodCalls(WrapAlways, Arrays.asList("stream"), false),
+                  new WrappingAndBracesStyle.MethodDeclarationParameters(WrapAlways, false, false, false),
+                  new WrappingAndBracesStyle.MethodCallArguments(DoNotWrap, false, false, false),
+                  null,
+                  null,
+                  null,
+                  null,
+                  null,
+                  null))),
+            null))),
           java(
             """
-              package com.example;
-              
               import java.util.Collection;
               import java.util.Optional;
               
@@ -614,8 +570,6 @@ class WrapMethodChainsTest implements RewriteTest {
               }
               """,
             """
-              package com.example;
-              
               import java.util.Collection;
               import java.util.Optional;
               
@@ -651,21 +605,24 @@ class WrapMethodChainsTest implements RewriteTest {
     @Test
     void formatStreamWithMultipleMultilineLambdas() {
         rewriteRun(
-          spec -> spec.recipe(toRecipe(() -> new WrappingAndBracesVisitor<>(new WrappingAndBracesStyle(
-            120,
-            new WrappingAndBracesStyle.IfStatement(false),
-            new WrappingAndBracesStyle.ChainedMethodCalls(WrapAlways, Arrays.asList("stream"), false),
-            new WrappingAndBracesStyle.MethodDeclarationParameters(WrapAlways, false, false, false),
-            null,
-            null,
-            null,
-            null,
-            null,
-            null)))),
+          spec -> spec.recipe(toRecipe(() -> new WrappingAndBracesVisitor<>(
+            List.of(
+              fromStyles(
+                new WrappingAndBracesStyle(
+                  120,
+                  new WrappingAndBracesStyle.IfStatement(false),
+                  new WrappingAndBracesStyle.ChainedMethodCalls(WrapAlways, Arrays.asList("stream"), false),
+                  new WrappingAndBracesStyle.MethodDeclarationParameters(WrapAlways, false, false, false),
+                  new WrappingAndBracesStyle.MethodCallArguments(DoNotWrap, false, false, false),
+                  null,
+                  null,
+                  null,
+                  null,
+                  null,
+                  null))),
+            null))),
           java(
             """
-              package com.example;
-              
               import java.util.List;
               import java.util.stream.Collectors;
               
@@ -690,8 +647,6 @@ class WrapMethodChainsTest implements RewriteTest {
               }
               """,
             """
-              package com.example;
-              
               import java.util.List;
               import java.util.stream.Collectors;
               
@@ -727,21 +682,24 @@ class WrapMethodChainsTest implements RewriteTest {
     @Test
     void formatStreamWithMixedLambdaStyles() {
         rewriteRun(
-          spec -> spec.recipe(toRecipe(() -> new WrappingAndBracesVisitor<>(new WrappingAndBracesStyle(
-            120,
-            new WrappingAndBracesStyle.IfStatement(false),
-            new WrappingAndBracesStyle.ChainedMethodCalls(WrapAlways, Arrays.asList("stream"), false),
-            new WrappingAndBracesStyle.MethodDeclarationParameters(WrapAlways, false, false, false),
-            null,
-            null,
-            null,
-            null,
-            null,
-            null)))),
+          spec -> spec.recipe(toRecipe(() -> new WrappingAndBracesVisitor<>(
+            List.of(
+              fromStyles(
+                new WrappingAndBracesStyle(
+                  120,
+                  new WrappingAndBracesStyle.IfStatement(false),
+                  new WrappingAndBracesStyle.ChainedMethodCalls(WrapAlways, Arrays.asList("stream"), false),
+                  new WrappingAndBracesStyle.MethodDeclarationParameters(WrapAlways, false, false, false),
+                  new WrappingAndBracesStyle.MethodCallArguments(DoNotWrap, false, false, false),
+                  null,
+                  null,
+                  null,
+                  null,
+                  null,
+                  null))),
+            null))),
           java(
             """
-              package com.example;
-              
               import java.util.List;
               import java.util.stream.Collectors;
               
@@ -758,8 +716,6 @@ class WrapMethodChainsTest implements RewriteTest {
               }
               """,
             """
-              package com.example;
-              
               import java.util.List;
               import java.util.stream.Collectors;
               
@@ -787,21 +743,24 @@ class WrapMethodChainsTest implements RewriteTest {
     @Test
     void formatStreamWithComplexNestedLambda() {
         rewriteRun(
-          spec -> spec.recipe(toRecipe(() -> new WrappingAndBracesVisitor<>(new WrappingAndBracesStyle(
-            120,
-            new WrappingAndBracesStyle.IfStatement(false),
-            new WrappingAndBracesStyle.ChainedMethodCalls(WrapAlways, Arrays.asList("stream"), false),
-            new WrappingAndBracesStyle.MethodDeclarationParameters(WrapAlways, false, false, false),
-            null,
-            null,
-            null,
-            null,
-            null,
-            null)))),
+          spec -> spec.recipe(toRecipe(() -> new WrappingAndBracesVisitor<>(
+            List.of(
+              fromStyles(
+                new WrappingAndBracesStyle(
+                  120,
+                  new WrappingAndBracesStyle.IfStatement(false),
+                  new WrappingAndBracesStyle.ChainedMethodCalls(WrapAlways, Arrays.asList("stream"), false),
+                  new WrappingAndBracesStyle.MethodDeclarationParameters(WrapAlways, false, false, false),
+                  new WrappingAndBracesStyle.MethodCallArguments(DoNotWrap, false, false, false),
+                  null,
+                  null,
+                  null,
+                  null,
+                  null,
+                  null))),
+            null))),
           java(
             """
-              package com.example;
-              
               import java.util.List;
               import java.util.stream.Collectors;
               
@@ -827,8 +786,6 @@ class WrapMethodChainsTest implements RewriteTest {
               }
               """,
             """
-              package com.example;
-              
               import java.util.List;
               import java.util.stream.Collectors;
               
@@ -864,21 +821,24 @@ class WrapMethodChainsTest implements RewriteTest {
     @Test
     void formatStreamWithMethodReferencesAndLambdas() {
         rewriteRun(
-          spec -> spec.recipe(toRecipe(() -> new WrappingAndBracesVisitor<>(new WrappingAndBracesStyle(
-            120,
-            new WrappingAndBracesStyle.IfStatement(false),
-            new WrappingAndBracesStyle.ChainedMethodCalls(WrapAlways, Arrays.asList("stream"), false),
-            new WrappingAndBracesStyle.MethodDeclarationParameters(WrapAlways, false, false, false),
-            null,
-            null,
-            null,
-            null,
-            null,
-            null)))),
+          spec -> spec.recipe(toRecipe(() -> new WrappingAndBracesVisitor<>(
+            List.of(
+              fromStyles(
+                new WrappingAndBracesStyle(
+                  120,
+                  new WrappingAndBracesStyle.IfStatement(false),
+                  new WrappingAndBracesStyle.ChainedMethodCalls(WrapAlways, Arrays.asList("stream"), false),
+                  new WrappingAndBracesStyle.MethodDeclarationParameters(WrapAlways, false, false, false),
+                  new WrappingAndBracesStyle.MethodCallArguments(DoNotWrap, false, false, false),
+                  null,
+                  null,
+                  null,
+                  null,
+                  null,
+                  null))),
+            null))),
           java(
             """
-              package com.example;
-              
               import java.util.List;
               import java.util.stream.Collectors;
               
@@ -895,8 +855,6 @@ class WrapMethodChainsTest implements RewriteTest {
               }
               """,
             """
-              package com.example;
-              
               import java.util.List;
               import java.util.stream.Collectors;
               
@@ -927,21 +885,24 @@ class WrapMethodChainsTest implements RewriteTest {
     @Test
     void formatStreamWithPeekAndMultilineLambda() {
         rewriteRun(
-          spec -> spec.recipe(toRecipe(() -> new WrappingAndBracesVisitor<>(new WrappingAndBracesStyle(
-            120,
-            new WrappingAndBracesStyle.IfStatement(false),
-            new WrappingAndBracesStyle.ChainedMethodCalls(WrapAlways, Arrays.asList("stream"), false),
-            new WrappingAndBracesStyle.MethodDeclarationParameters(WrapAlways, false, false, false),
-            null,
-            null,
-            null,
-            null,
-            null,
-            null)))),
+          spec -> spec.recipe(toRecipe(() -> new WrappingAndBracesVisitor<>(
+            List.of(
+              fromStyles(
+                new WrappingAndBracesStyle(
+                  120,
+                  new WrappingAndBracesStyle.IfStatement(false),
+                  new WrappingAndBracesStyle.ChainedMethodCalls(WrapAlways, Arrays.asList("stream"), false),
+                  new WrappingAndBracesStyle.MethodDeclarationParameters(WrapAlways, false, false, false),
+                  new WrappingAndBracesStyle.MethodCallArguments(DoNotWrap, false, false, false),
+                  null,
+                  null,
+                  null,
+                  null,
+                  null,
+                  null))),
+            null))),
           java(
             """
-              package com.example;
-              
               import java.util.List;
               import java.util.stream.Collectors;
               
@@ -957,8 +918,6 @@ class WrapMethodChainsTest implements RewriteTest {
               }
               """,
             """
-              package com.example;
-              
               import java.util.List;
               import java.util.stream.Collectors;
               
@@ -984,21 +943,24 @@ class WrapMethodChainsTest implements RewriteTest {
     @Test
     void preserveAlreadyFormattedStreamWithMultilineLambda() {
         rewriteRun(
-          spec -> spec.recipe(toRecipe(() -> new WrappingAndBracesVisitor<>(new WrappingAndBracesStyle(
-            120,
-            new WrappingAndBracesStyle.IfStatement(false),
-            new WrappingAndBracesStyle.ChainedMethodCalls(WrapAlways, Arrays.asList("stream"), false),
-            new WrappingAndBracesStyle.MethodDeclarationParameters(WrapAlways, false, false, false),
-            null,
-            null,
-            null,
-            null,
-            null,
-            null)))),
+          spec -> spec.recipe(toRecipe(() -> new WrappingAndBracesVisitor<>(
+            List.of(
+              fromStyles(
+                new WrappingAndBracesStyle(
+                  120,
+                  new WrappingAndBracesStyle.IfStatement(false),
+                  new WrappingAndBracesStyle.ChainedMethodCalls(WrapAlways, Arrays.asList("stream"), false),
+                  new WrappingAndBracesStyle.MethodDeclarationParameters(WrapAlways, false, false, false),
+                  new WrappingAndBracesStyle.MethodCallArguments(DoNotWrap, false, false, false),
+                  null,
+                  null,
+                  null,
+                  null,
+                  null,
+                  null))),
+            null))),
           java(
             """
-              package com.example;
-              
               import java.util.Collection;
               import java.util.Optional;
               
@@ -1023,8 +985,6 @@ class WrapMethodChainsTest implements RewriteTest {
               }
               """,
             """
-              package com.example;
-              
               import java.util.Collection;
               import java.util.Optional;
               
@@ -1060,21 +1020,24 @@ class WrapMethodChainsTest implements RewriteTest {
     @Test
     void formatStreamWithReduceMultilineLambda() {
         rewriteRun(
-          spec -> spec.recipe(toRecipe(() -> new WrappingAndBracesVisitor<>(new WrappingAndBracesStyle(
-            120,
-            new WrappingAndBracesStyle.IfStatement(false),
-            new WrappingAndBracesStyle.ChainedMethodCalls(WrapAlways, Arrays.asList("stream"), false),
-            new WrappingAndBracesStyle.MethodDeclarationParameters(WrapAlways, false, false, false),
-            null,
-            null,
-            null,
-            null,
-            null,
-            null)))),
+          spec -> spec.recipe(toRecipe(() -> new WrappingAndBracesVisitor<>(
+            List.of(
+              fromStyles(
+                new WrappingAndBracesStyle(
+                  120,
+                  new WrappingAndBracesStyle.IfStatement(false),
+                  new WrappingAndBracesStyle.ChainedMethodCalls(WrapAlways, Arrays.asList("stream"), false),
+                  new WrappingAndBracesStyle.MethodDeclarationParameters(WrapAlways, false, false, false),
+                  new WrappingAndBracesStyle.MethodCallArguments(DoNotWrap, false, false, false),
+                  null,
+                  null,
+                  null,
+                  null,
+                  null,
+                  null))),
+            null))),
           java(
             """
-              package com.example;
-              
               import java.util.List;
               
               class Test {
@@ -1088,15 +1051,13 @@ class WrapMethodChainsTest implements RewriteTest {
               }
               """,
             """
-              package com.example;
-              
               import java.util.List;
               
               class Test {
                   Integer sum(List<Integer> numbers) {
                       return numbers.stream()
               .filter(n -> n > 0)
-              .reduce(0,(a, b) -> {
+              .reduce(0, (a, b) -> {
                           int sum = a + b;
                           System.out.println("Current sum: " + sum);
                           return sum;
@@ -1111,21 +1072,24 @@ class WrapMethodChainsTest implements RewriteTest {
     @Test
     void formatStreamInBuilderArgument() {
         rewriteRun(
-          spec -> spec.recipe(toRecipe(() -> new WrappingAndBracesVisitor<>(new WrappingAndBracesStyle(
-            120,
-            new WrappingAndBracesStyle.IfStatement(false),
-            new WrappingAndBracesStyle.ChainedMethodCalls(WrapAlways, Arrays.asList("builder", "stream"), false),
-            new WrappingAndBracesStyle.MethodDeclarationParameters(WrapAlways, false, false, false),
-            null,
-            null,
-            null,
-            null,
-            null,
-            null)))),
+          spec -> spec.recipe(toRecipe(() -> new WrappingAndBracesVisitor<>(
+            List.of(
+              fromStyles(
+                new WrappingAndBracesStyle(
+                  120,
+                  new WrappingAndBracesStyle.IfStatement(false),
+                  new WrappingAndBracesStyle.ChainedMethodCalls(WrapAlways, Arrays.asList("builder", "stream"), false),
+                  new WrappingAndBracesStyle.MethodDeclarationParameters(WrapAlways, false, false, false),
+                  new WrappingAndBracesStyle.MethodCallArguments(DoNotWrap, false, false, false),
+                  null,
+                  null,
+                  null,
+                  null,
+                  null,
+                  null))),
+            null))),
           java(
             """
-              package com.example;
-              
               import java.util.List;
               import java.util.stream.Collectors;
               
@@ -1136,8 +1100,6 @@ class WrapMethodChainsTest implements RewriteTest {
               }
               """,
             """
-              package com.example;
-              
               import java.util.List;
               import java.util.stream.Collectors;
               
@@ -1160,33 +1122,45 @@ class WrapMethodChainsTest implements RewriteTest {
     @Test
     void chopIfTooLong() {
         rewriteRun(
-          spec -> spec.recipe(toRecipe(() -> new WrappingAndBracesVisitor<>(new WrappingAndBracesStyle(
-            79,
-            new WrappingAndBracesStyle.IfStatement(false),
-            new WrappingAndBracesStyle.ChainedMethodCalls(ChopIfTooLong, Arrays.asList("builder", "stream"), false),
-            new WrappingAndBracesStyle.MethodDeclarationParameters(WrapAlways, false, false, false),
-            null,
-            null,
-            null,
-            null,
-            null,
-            null)))),
+          spec -> spec.recipe(toRecipe(() -> new JavaIsoVisitor<>() {
+              @Override
+              public J.CompilationUnit visitCompilationUnit(J.CompilationUnit cu, ExecutionContext p) {
+                  J.CompilationUnit formatted = (J.CompilationUnit) new SpacesVisitor<>(IntelliJ.spaces(), true, null).visit(cu, p, getCursor().getParent());
+                  formatted = (J.CompilationUnit) new WrappingAndBracesVisitor<>(
+                    List.of(fromStyles(
+                      new WrappingAndBracesStyle(
+                        79,
+                        new WrappingAndBracesStyle.IfStatement(false),
+                        new WrappingAndBracesStyle.ChainedMethodCalls(ChopIfTooLong, Arrays.asList("builder", "stream"), false),
+                        new WrappingAndBracesStyle.MethodDeclarationParameters(WrapAlways, false, false, false),
+                        new WrappingAndBracesStyle.MethodCallArguments(DoNotWrap, false, false, false),
+                        null,
+                        null,
+                        null,
+                        null,
+                        null,
+                        null))),
+                    null).visit(formatted, p, getCursor().getParent());
+                  return (J.CompilationUnit) new MergeSpacesVisitor().visit(cu, formatted);
+              }
+          })),
           java(
             """
-              package com.example;
-              
               class Test {
                   void test() {
-                      String obj = new StringBuilder().append("test").append("25").toString();
+                      String ob1 = new StringBuilder().append("test").append("25").toString();
+                      String ob2 = new StringBuilder().append("test")
+                          .append("25").toString();
                   }
               }
               """,
             """
-              package com.example;
-              
               class Test {
                   void test() {
-                      String obj = new StringBuilder().append("test")
+                      String ob1 = new StringBuilder().append("test")
+              .append("25")
+              .toString();
+                      String ob2 = new StringBuilder().append("test")
               .append("25")
               .toString();
                   }
@@ -1200,21 +1174,24 @@ class WrapMethodChainsTest implements RewriteTest {
     @ValueSource(ints = {80, 81})
     void doNotChopIfNotTooLong(int length) {
         rewriteRun(
-          spec -> spec.recipe(toRecipe(() -> new WrappingAndBracesVisitor<>(new WrappingAndBracesStyle(
-            length,
-            new WrappingAndBracesStyle.IfStatement(false),
-            new WrappingAndBracesStyle.ChainedMethodCalls(ChopIfTooLong, Arrays.asList("builder", "stream"), false),
-            new WrappingAndBracesStyle.MethodDeclarationParameters(WrapAlways, false, false, false),
-            null,
-            null,
-            null,
-            null,
-            null,
-            null)))),
+          spec -> spec.recipe(toRecipe(() -> new WrappingAndBracesVisitor<>(
+            List.of(
+              fromStyles(
+                new WrappingAndBracesStyle(
+                  length,
+                  new WrappingAndBracesStyle.IfStatement(false),
+                  new WrappingAndBracesStyle.ChainedMethodCalls(ChopIfTooLong, Arrays.asList("builder", "stream"), false),
+                  new WrappingAndBracesStyle.MethodDeclarationParameters(WrapAlways, false, false, false),
+                  new WrappingAndBracesStyle.MethodCallArguments(DoNotWrap, false, false, false),
+                  null,
+                  null,
+                  null,
+                  null,
+                  null,
+                  null))),
+            null))),
           java(
             """
-              package com.example;
-              
               class Test {
                   void test() {
                       String obj = new StringBuilder().append("test").append("25").toString();
